# NeoZygisk-fork

./: .gitignore  .gitmodules  build.gradle.kts
.github/scripts/: telegram_url.py
.github/workflows/: ci.yml
gradle/: libs.versions.toml
loader/: build.gradle.kts
loader/src/: CMakeLists.txt
loader/src/common/: daemon.cpp  elf_utils.cpp  files.cpp  misc.cpp  socket_utils.cpp
loader/src/include/: daemon.hpp  dl.hpp  elf_utils.hpp  files.hpp  logging.hpp  misc.hpp  shared_memory.hpp  socket_utils.hpp  unique.hpp
loader/src/injector/: android_util.hpp  clean.cpp  custom_linker.cpp  custom_linker.hpp  entry.cpp  gen_jni_hooks.py  hook.cpp  jni_hooks.hpp  module.cpp  module.hpp  seccomp.cpp  unmount.cpp  zygisk.hpp
loader/src/ptracer/: event_loop.cpp  event_loop.hpp  main.cpp  monitor.hpp  monitor_impl.cpp  ptracer.cpp  remote_csoloader.cpp  remote_csoloader.hpp  remote_custom_linker.cpp  remote_custom_linker.hpp  types.hpp  utils.cpp  utils.hpp  zygote_abi.cpp  zygote_abi.hpp
module/: build.gradle.kts  changelog.md  zygisk.json
module/src/: action.sh  customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  spoof.prop
zygiskd/: Cargo.toml  build.gradle.kts
zygiskd/src/: CMakeLists.txt  companion.cpp  constants.rs  main.cpp  main.rs  mount.cpp  root_impl.cpp  shared_mem.rs  utils.cpp  utils.rs  zygiskd.rs  zygiskd_main.cpp
zygiskd/src/include/: companion.hpp  constants.hpp  main.hpp  mount.hpp  root_impl.hpp  utils.hpp  zygiskd_main.hpp
zygiskd/src/root_impl/: apatch.cpp  apatch.hpp  apatch.rs  kernelsu.cpp  kernelsu.hpp  magisk.cpp  magisk.hpp  magisk.rs
