[package]
name = "zygiskd"
authors = ["JingMatrix"]
version = "1.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
android_logger = "0.15"
anyhow = { version = "1.0", default-features = false, features = ["std"] }
bitflags = { version = "2.9" }
konst = "0.3"
libc = "0.2"
log = "0.4"
memfd = "0.6"
num_enum = "0.7"
passfd = "0.1"
procfs = "0.18"
proc-maps = "0.4"

rustix = { git = "https://github.com/JingMatrix/rustix", branch = "main", features = [ "fs", "net", "pipe", "thread" ] }

[profile.dev]
strip = false
panic = "abort"

[profile.release]
strip = false
debug = true
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[patch.crates-io]
rustix = { git = "https://github.com/JingMatrix/rustix", branch = "main" }
